--- a/client/templates/profile.html
+++ b/client/templates/profile.html
@@ -27,7 +27,9 @@
 
     <div class="header-actions">
       <button class="action-btn">
-        <i class="fas fa-shopping-cart"></i>
+        <a href="cart.html" class="cart-link" style="color: #e9b540;">
+          <i class="fas fa-shopping-cart"></i>
+        </a>
       </button>
       <div class="divider"></div>
       <button class="action-btn">
