--- a/client/templates/checkout.html
+++ b/client/templates/checkout.html
@@ -8,8 +8,8 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;600;700&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="/static/css/product.css" />
-  <link rel="stylesheet" href="/static/css/checkout.css" />
+  <link rel="stylesheet" href="../static/css/product.css" />
+  <link rel="stylesheet" href="../static/css/checkout.css" />
   <meta name="theme-color" content="#0f1115">
   <meta name="description" content="Complete your order securely at BariFoods">
 </head>
@@ -18,7 +18,7 @@
   <header class="navbar navbar--brand">
     <div class="logo-container">
       <a href="index.html" class="brand-link" aria-label="Home">
-        <img class="logo" src="/static/img/bari.jpg" alt="BariFoods" />
+        <img class="logo" src="../static/img/bari.jpg" alt="BariFoods" />
         <h1>BARI FOODS</h1>
       </a>
     </div>
@@ -201,8 +201,8 @@
     </div>
   </footer>
 
-  <script type="module" src="/static/js/checkout.js"></script>
-  <script src="/static/js/header.js" defer></script>
+  <script type="module" src="../static/js/checkout.js"></script>
+  <script src="../static/js/header.js" defer></script>
 </body>
 
 </html>
