--- a/client/templates/products.html
+++ b/client/templates/products.html
@@ -5,9 +5,9 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Products</title>
-  <link rel="stylesheet" href="/static/css/product.css">
-  <link rel="stylesheet" href="/static/css/style.css">
-  <link rel="stylesheet" href="/static/css/auth-popup.css">
+  <link rel="stylesheet" href="../static/css/product.css">
+  <link rel="stylesheet" href="../static/css/style.css">
+  <link rel="stylesheet" href="../static/css/auth-popup.css">
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" rel="stylesheet">
@@ -18,7 +18,7 @@
 <body>
   <header class="navbar">
     <a class="logo-container" href="index.html">
-      <img src="/static/img/bari.jpg" alt="Bari Foods Logo" class="logo">
+      <img src="../static/img/bari.jpg" alt="Bari Foods Logo" class="logo">
       <h1>BARI FOODS</h1>
     </a>
 
@@ -132,7 +132,7 @@
       <!-- Left section -->
       <div class="footer-left">
         <div class="footer-logo-container">
-          <img src="/static/img/bari.jpg" alt="Bari Foods Logo" class="footer-logo">
+          <img src="../static/img/bari.jpg" alt="Bari Foods Logo" class="footer-logo">
           <h2>BARI FOODS</h2>
         </div>
         <p>Savor tradition where every bite echoes Royal Rajasthani flavor and brings you closer to our rich culinary
@@ -140,9 +140,9 @@
 
         <div class="footer-socials">
           <a href="#" aria-label="Facebook"><i class="fab fa-facebook-f"></i></a>
-          <a href="#" aria-label="Instagram"><i class="fab fa-instagram"></i></a>
+          <a href="https://www.instagram.com/barifoodsofficial/" aria-label="Instagram"><i class="fab fa-instagram"></i></a>
           <a href="#" aria-label="Twitter"><i class="fab fa-twitter"></i></a>
-          <a href="#" aria-label="YouTube"><i class="fab fa-youtube"></i></a>
+          <a href="https://www.youtube.com/@barifoodsofficial" aria-label="YouTube"><i class="fab fa-youtube"></i></a>
         </div>
       </div>
 
@@ -172,7 +172,7 @@
           <h4>Contact Us</h4>
           <ul>
             <li><a href="mailto:barifoods.in@gmail.com"> barifoods.in@gmail.com</a></li>
-            <li><a href="tel:+919582489966">+91 958 248 966</a></li>
+            <li><a href="tel:+919829288937">+91 9829288937</a></li>
             <li class="address">Jaipur, RJ 302001</li>
           </ul>
         </div>
@@ -184,7 +184,7 @@
     <!-- Bottom -->
     <div class="footer-bottom">
       <div class="footer-bottom-content">
-        <p>Copyright Â© 2025 Bari Foods | All rights reserved</p>
+        <p>Copyright © 2025 Bari Foods | All rights reserved</p>
       </div>
     </div>
   </footer>
@@ -201,7 +201,7 @@
       <div class="auth-form login-form active" id="loginForm">
         <div class="auth-header">
           <div class="auth-logo">
-            <img src="/static/img/bari.jpg" alt="Bari Foods">
+            <img src="../static/img/bari.jpg" alt="Bari Foods">
             <h2>Welcome Back</h2>
           </div>
           <p class="auth-subtitle">Sign in to your account</p>
@@ -250,7 +250,7 @@
       <div class="auth-form signup-form" id="signupForm">
         <div class="auth-header">
           <div class="auth-logo">
-            <img src="/static/img/bari.jpg" alt="Bari Foods">
+            <img src="../static/img/bari.jpg" alt="Bari Foods">
             <h2>Join Bari Foods</h2>
           </div>
           <p class="auth-subtitle">Create your account to get started</p>
@@ -330,9 +330,9 @@
     </div>
   </div>
 
-  <script type="module" src="/static/js/products.js" defer></script>
-  <script src="/static/js/header.js"></script>
-  <script src="/static/js/profile.js"></script>
+  <script type="module" src="../static/js/products.js" defer></script>
+  <script src="../static/js/header.js"></script>
+  <script src="../static/js/profile.js"></script>
 </body>
 
 </html>
