--- a/client/templates/profile.html
+++ b/client/templates/profile.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Account Management - Profile</title>
-  <link rel="stylesheet" href="/static/css/profile.css">
+  <link rel="stylesheet" href="../static/css/profile.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
   <link
     href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&family=Playfair+Display:wght@400;600;700&display=swap"
@@ -20,7 +20,7 @@
         <i class="fas fa-bars"></i>
       </button>
       <a href="index.html" class="logo-container">
-        <img src="/static/img/bari.jpg" alt="Logo" class="logo">
+        <img src="../static/img/bari.jpg" alt="Logo" class="logo">
         <span class="brand">BARI FOODS</span>
       </a>
     </div>
