--- a/client/templates/cart.html
+++ b/client/templates/cart.html
@@ -5,8 +5,8 @@
   <meta charset="utf-8" />
   <title>BariFoods - Cart</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" /> <!-- Theme + page CSS -->
-  <link rel="stylesheet" href="/static/css/product.css" />
-  <link rel="stylesheet" href="/static/css/cart.css" />
+  <link rel="stylesheet" href="../static/css/product.css" />
+  <link rel="stylesheet" href="../static/css/cart.css" />
 
   <link href='https://cdn.boxicons.com' rel='stylesheet'>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
@@ -16,7 +16,7 @@
   <header class="navbar navbar--brand">
     <div class="logo-container"> 
       <a href="index.html" class="brand-link" aria-label="Home"> 
-        <img class="logo" src="/static/img/bari.jpg" alt="BariFoods" /> 
+        <img class="logo" src="../static/img/bari.jpg" alt="BariFoods" /> 
         <h1>BARI FOODS</h1>
       </a>
     </div>
@@ -91,8 +91,8 @@
   </footer> <!-- Scripts -->
 
 
-  <script type="module" src="/static/js/cart.js"></script>
-  <script src="/static/js/header.js" defer></script>
+  <script type="module" src="../static/js/cart.js"></script>
+  <script src="../static/js/header.js" defer></script>
   <script>
     // Back button behavior (now above title) 
     (function () {
