--- a/client/templates/index.html
+++ b/client/templates/index.html
@@ -101,11 +101,12 @@
     <!-- Popular Products Section -->
     <section class="popular-section" id="popular-products-section">
       <img src="../static/img/top-right.png" alt="Decorative Corner" class="corner-img" loading="lazy" />
+      <img src="../static/img/top-right.png" alt="Decorative Corner" class="corner-img-second" loading="lazy" />      
 
       <div class="popular-headings">
         <h3 class="section-subtitle">CUSTOMER FAVORITES</h3>
         <h1 class="section-title">Popular Products</h1>
-        <p class="section-description">Handcrafted with love, seasoned with tradition â€” discover the flavors that keep
+        <p class="section-description">Handcrafted with love, seasoned with tradition discover the flavors that keep
           our customers coming back for more</p>
       </div>
 
@@ -317,7 +318,7 @@
     <!-- Bottom -->
     <div class="footer-bottom">
       <div class="footer-bottom-content">
-        <p>Copyright Â© 2025 Bari Foods | All rights reserved</p>
+        <p>Copyright © 2025 Bari Foods | All rights reserved</p>
       </div>
     </div>
   </footer>
