royal heritage update and css

--- a/client/templates/index.html
+++ b/client/templates/index.html
@@ -161,25 +161,30 @@
     <section class="about-section" id="about">
       <div class="about-content">
         <h3>BARI FOODS LEGACY</h3>
-        <h1>Our Royal Heritage</h1>
-        <p class="main-sub-heading">For over four generations, <span class="highlight">Bari Foods</span> has been the
-          custodian of authentic
-          Rajasthani culinary traditions, inspired by the timeless artistry of blue pottery and the royal kitchens of
-          maharajas.</p>
-        <p class="history-sub-heading">Rooted in passion, we curate unforgettable dining experiences and offer
-          exceptional services, blending
-          culinary artistry with warm hospitality.</p>
+        <h1>Tradition, Done Right</h1>
+        <p class="main-sub-heading">At <span class="highlight">Bari Foods,</span> our Premium Bhujia is made using traditional Rajasthani recipes and a disciplined, modern process. We start with carefully selected moth dal and whole spices, blended in precise proportions to preserve authentic flavor.</p>
+        <p class="history-sub-heading">Each batch is prepared using premium oil with 75% less usage, ensuring a crisp texture without excess greasiness. We avoid palm oil, preservatives, and unnecessary chemicals keeping the product clean, light, and honest.
+        
+        </p>
 
         <div class="tags">
-          <span>Royal Recipes</span>
-          <span>Pure Ingredients</span>
-          <span>Artisan Crafted</span>
+          <span>Traditional Recipe</span>
+          <span>Clean Ingredients</span>
+          <span>Controlled Process</span>
         </div>
 
       </div>
 
       <div class="heritage-image">
-        <img src="../static/img/history-img.png" alt="Rajasthani Food Heritage" loading="lazy">
+        
+        <img src="../static/products-img/slide1.jpg
+        " class="slide active" alt="display" loading="lazy">
+        <img src="../static/products-img/slide2.jpg
+        " class="slide" alt="Packaging">
+        <img src="../static/products-img/slide3.jpg
+        " class="slide" alt="Packaging">
+        <img src="../static/products-img/slide4.jpg
+        " class="slide" alt="Ingredients">
       </div>
 
     </section>
