services ka kaam

--- a/client/templates/index.html
+++ b/client/templates/index.html
@@ -176,15 +176,12 @@
       </div>
 
       <div class="heritage-image">
-        
-        <img src="../static/products-img/slide1.jpg
-        " class="slide active" alt="display" loading="lazy">
-        <img src="../static/products-img/slide2.jpg
-        " class="slide" alt="Packaging">
-        <img src="../static/products-img/slide3.jpg
-        " class="slide" alt="Packaging">
-        <img src="../static/products-img/slide4.jpg
-        " class="slide" alt="Ingredients">
+        <img src="../static/products-img/slide1.jpg" class="slide active" alt="display" loading="lazy">
+        <img src="../static/products-img/slide2.jpg" class="slide" alt="Packaging">
+        <img src="../static/products-img/slide3.jpg" class="slide" alt="Packaging">
+        <img src="../static/products-img/slide4.jpg" class="slide" alt="Ingredients">
+        <img src="../static/products-img/slide5.jpg" class="slide" alt="Ingredients">
+        <img src="../static/products-img/slide6.jpg" class="slide" alt="Ingredients">
       </div>
 
     </section>
