--- a/client/static/css/style.css
+++ b/client/static/css/style.css
@@ -446,7 +446,7 @@ body {
   position: absolute;
   right: 60px;
   justify-content: flex-end;
-  bottom: 0;
+  bottom: 80px;
   display: flex;
 
 }
@@ -459,9 +459,7 @@ body {
   transition: var(--transition-normal);
   position: relative;
   z-index: 2;
-  margin-right: 80px;
-  margin-bottom: 200px;
-  margin-top: 5px;
+  margin-right: 60px;
 }
 
 .wave-decoration {
