--- a/client/static/css/checkout.css
+++ b/client/static/css/checkout.css
@@ -42,6 +42,13 @@ body {
   line-height: 1.6;
 }
 
+/* Dot removed (toggle)*/
+.menu-toggle {
+  display: none;
+}
+
+
+
 /* Brand header*/
 .navbar--brand {
   display: flex;
@@ -59,6 +66,15 @@ body {
   border-bottom: 1px solid rgba(233, 181, 64, 0.15);
   transition: var(--transition);
 }
+
+
+.navbar ul,
+.navbar li {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+}
+
 
 .navbar--brand:hover {
   border-bottom-color: rgba(233, 181, 64, 0.3);
